<resources>
    <string name="app_name">AlfaSdkExample</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="call">Call +92 21 111 262 872</string>
    <string name="enterYourLoginCredentials">Enter your login credentials</string>
    <string name="link">www.bmatrade.com</string>
    <string name="thinkStupid">Think Investments. Think BMA</string>
    <string name="pleaseLoginHere">PLEASE LOGIN HERE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="key_login">key_login</string>
    <string name="key_symbols">key_symbols</string>
    <string name="key_market">key_market</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">DELETE</string>
    <string name="key_events">key_events</string>
    <string name="change_pass">Change Password</string>
    <string name="change_pin">Change Pin</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password (at most 8 characters)</string>
    <string name="confirm_pass">Confirm New Password</string>
    <string name="submit">SUBMIT</string>
    <string name="old_pin">Old Pin</string>
    <string name="new_pin">New Pin (4 characters)</string>
    <string name="confirm_pin">Confirm New Pin</string>
    <string name="cash_withdrawal">Cash Withdrawal</string>
    <string name="amount">Enter Amount</string>
    <string name="developed_by">Developed by: Softech Systems</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="crash_toast_text">Caught a Crash, send this as email</string>
    <string name="key_remember_pin">key_remember_pin</string>
    <string name="no_internet">cannot connect to the Internet</string>
    <string name="action_home">Home</string>
    <string name="cashBalance">Cash Balance:</string>
    <string name="withDrawalLimit">Withdrawal Limit:</string>
    <string name="pendingWithdrawal">Pending Withdrawal:</string>
    <string name="remainingAmount">Remaining Amount:</string>
    <string name="key_username">key_username</string>
    <string name="key_password">key_password</string>
    <string name="key_userId">key_userid</string>
    <string name="key_decrypted_password">key_decrypted_password</string>
    <string name="key_client">key_client</string>
    <string name="transaction">Transaction</string>
    <string name="balance">Balance</string>
    <string name="ClientCode">Client Code</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="LIMIT">LIMIT</string>
    <string name="symbol">Symbol</string>
    <string name="enterVolume">Enter Volume</string>
    <string name="enterPrice">Enter Price</string>
    <string name="moreOptions">MORE OPTIONS</string>
    <string name="enterDiscVolume">Enter Disc Volume</string>
    <string name="enterTriggerPrice">Enter Trigger Price</string>
    <string name="NOR">NOR</string>
    <string name="enterOrderReference">Enter Order Reference</string>
    <string name="orderValue">ORDER VALUE:</string>
    <string name="pleaseEnterVolume">Please provide a volume.</string>
    <string name="discloseVolumeMustBe">Disclose Volume must be greater than or equal to Volume.</string>
    <string name="priceMustBe">Only decimal value is allowed for Price.</string>
    <string name="priceMustBeGreaterThan">Price must be greater than zero.</string>
    <string name="providePriceRateTriggerPrice">Please provide Price/Rate and Trigger Price for STOP LOSS.</string>
    <string name="triggerPriceMustBe">Only decimal value is allowed for Trigger Price.</string>
    <string name="triggerPriceMustBeGreaterThan">Trigger Price must be greater than zero.</string>
    <string name="triggerPriceMustBeLess">Trigger Price must be less than or equal to Rate/Price.</string>
    <string name="triggerPriceMustBeGreater">Trigger Price must be greater than or equal to Rate/Price.</string>
    <string name="orderNatureAON">Order Nature \'AON\' not allowed for LEVERAGE BUY.</string>
    <string name="leverageBuyOnlyAllowed">LEVERAGE BUY only allowed for Regular Market with Buy option selected.</string>
    <string name="shortSellOnlyAllowed">SHORT SELL only allowed for Future Market.</string>
    <string name="shortSellNotAllowed">Short Sell not allowed for Buy option selected and future market.</string>
    <string name="providePriceRateTriggerPriceMIT">Please provide Price/Rate and Trigger Price for MIT.</string>
    <string name="triggerPriceMustBeGreaterThanPrice">Trigger Price must be greater than Rate/Price.</string>
    <string name="leverageBuyOnlyAllowedFUT">LEVERAGE BUY with Future market not allowed.</string>
    <string name="shortSellOnlyAllowedSell">SHORT SELL only allowed for Future Market and Sell side.</string>
    <string name="CDC">CDC</string>
    <string name="REG">REG</string>
    <string name="FUT">FUT</string>
    <string name="NET">NET</string>
    <string name="RATE">RATE</string>
    <string name="cdcTradable">CDC Tradable</string>
    <string name="closingRate">Closing Rate</string>
    <string name="CorpAct">Corp. Act.</string>
    <string name="CustodyBalance">Custody Balance</string>
    <string name="Forward">Forward</string>
    <string name="PhyTradable">Phy. Tradable</string>
    <string name="Registered">Registered</string>
    <string name="Regular">Regular</string>
    <string name="Spot">Spot</string>
    <string name="UnRegistered">UnRegistered</string>
    <string name="LSnotAllowedForBuy">LS not allowed for Buy option.</string>
    <string name="MFBNotAllowedForSell">MFB not allowed for sell option</string>
    <string name="LBNotAllowedForSell">LB not allowed for sell option</string>
    <string name="action">Action: </string>
    <string name="volume">Volume</string>
    <string name="price">Price</string>
    <string name="estimated_value">Estimated Value</string>
    <string name="enter_pin_code">Enter pincode here</string>
    <string name="remember_me">Remember Pin</string>
    <string name="no_file_chosen">No File Chosen</string>
    <string name="termsOfService">Terms of Service</string>
    <string name="sahulat">Schedule of Charges</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="termsAndConditionsTransaction">I agree to the Terms of Service and Privacy Policy.</string>
</resources>