<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context="com.softech.alfasdk.Fragments.ChangePassFragment">

    <EditText
        android:id="@+id/edittext_old_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/white_cornerd"
        android:gravity="center"
        android:hint="@string/old_pin"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        android:textColorHint="@color/blinkGrey" />

    <EditText
        android:id="@+id/edittext_new_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/white_cornerd"
        android:gravity="center"
        android:hint="@string/new_pin"
        android:inputType="textPassword"
        android:maxLength="4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        android:textColorHint="@color/blinkGrey" />

    <EditText
        android:id="@+id/edittext_confirm_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/white_cornerd"
        android:gravity="center"
        android:hint="@string/confirm_pin"
        android:inputType="textPassword"
        android:maxLength="4"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        android:textColorHint="@color/blinkGrey" />


    <Button
        android:id="@+id/button_change_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_blue"
        android:text="@string/submit"
        android:textColor="@color/white" />
</LinearLayout>
