<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"

        android:layout_marginRight="6dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/etclientcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@color/greyBar"
            android:hint="@string/ClientCode"
            android:inputType="textCapCharacters|textVisiblePassword|textNoSuggestions"
            android:maxLines="1"
            android:padding="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/textColorPrimary" />

        <TextView
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="Last 7 days transactions"
            android:gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/search_list_view1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout10"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:clickable="true"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/cancel_search1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:src="@drawable/cancel_white" />

        <ListView
            android:id="@+id/search_list1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/alfaRed"
        android:orientation="horizontal"
        android:padding="6dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/textView_transaction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/transaction"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/amount"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView_balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/balance"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_cashBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp" />


</LinearLayout>
